--- a/package.json
+++ b/package.json
@@ -17,13 +17,30 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:e2e": "jest --config ./test/jest-e2e.json",
-    "webpack": "webpack --config webpack.config.js"
+    "webpack": "webpack --config webpack.config.js",
+    "migrate:latest": "node_modules/ts-node/dist/bin.js node_modules/typeorm/cli.js migration:run",
+    "migrate:rollback": "node_modules/ts-node/dist/bin.js node_modules/typeorm/cli.js migration:revert"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git@github.com:mikahas/saavai.git"
   },
   "dependencies": {
     "@nestjs/common": "^5.1.0",
     "@nestjs/core": "^5.1.0",
+    "@nestjs/passport": "^5.1.0",
+    "@nestjs/typeorm": "^5.2.2",
+    "@types/lodash": "^4.14.117",
+    "ajv": "^6.5.4",
+    "bcryptjs": "^2.4.3",
+    "dotenv": "^6.1.0",
+    "jsonwebtoken": "^8.3.0",
+    "lodash": "^4.17.11",
+    "passport": "^0.4.0",
+    "passport-http-bearer": "^1.0.1",
     "reflect-metadata": "^0.1.12",
     "rxjs": "^6.2.2",
+    "typeorm": "^0.2.8",
     "typescript": "^3.0.1"
   },
   "devDependencies": {
@@ -34,6 +51,7 @@
     "@types/supertest": "^2.0.5",
     "jest": "^23.5.0",
     "nodemon": "^1.18.3",
+    "pg": "^7.6.0",
     "prettier": "^1.14.2",
     "rimraf": "^2.6.2",
     "supertest": "^3.1.0",
