chore: add swagger documentation

--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@nestjs/common": "^5.1.0",
     "@nestjs/core": "^5.1.0",
     "@nestjs/passport": "^5.1.0",
+    "@nestjs/swagger": "^2.5.1",
     "@nestjs/typeorm": "^5.2.2",
     "@types/lodash": "^4.14.117",
     "ajv": "^6.5.4",
