--- a/front/package.json
+++ b/front/package.json
@@ -7,7 +7,8 @@
     "lint": "ng lint",
     "e2e": "ng e2e",
     "start": "ng-swagger-gen && ng serve",
-    "build": "ng-swagger-gen && ng build -prod"
+    "build": "ng-swagger-gen && ng build -prod",
+    "local-swagger-gen": "node_modules/.bin/ng-swagger-gen -i http://localhost:3000/api/docs"
   },
   "private": true,
   "dependencies": {
@@ -25,6 +26,7 @@
     "@angular/router": "~7.0.0",
     "core-js": "^2.5.4",
     "hammerjs": "^2.0.8",
+    "moment": "^2.22.2",
     "rxjs": "~6.3.3",
     "zone.js": "~0.8.26"
   },
