feat: generate api key on registration and add a function for regenerating a new api key

--- a/ormconfig.json
+++ b/ormconfig.json
@@ -11,5 +11,6 @@
     "cli": {
         "migrationsDir": "migrations"
     },
-    "synchronize": false
+    "synchronize": false,
+    "logging": false
 }
