--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
     "dotenv": "^6.1.0",
     "jsonwebtoken": "^8.3.0",
     "lodash": "^4.17.11",
+    "moment": "^2.22.2",
+    "nanoid": "^2.0.0",
     "passport": "^0.4.0",
     "passport-http-bearer": "^1.0.1",
     "reflect-metadata": "^0.1.12",
