--- a/front/package.json
+++ b/front/package.json
@@ -6,35 +6,35 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "start": "ng-swagger-gen && ng serve",
+    "start": "npm run local-swagger-gen && ng serve",
     "build": "ng-swagger-gen && ng build -prod",
     "local-swagger-gen": "node_modules/.bin/ng-swagger-gen -i http://localhost:3000/api/docs"
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^7.0.1",
+    "@angular/animations": "^7.0.2",
     "@angular/cdk": "^7.0.2",
-    "@angular/common": "~7.0.0",
-    "@angular/compiler": "~7.0.0",
-    "@angular/core": "~7.0.0",
+    "@angular/common": "^7.0.2",
+    "@angular/compiler": "^7.0.2",
+    "@angular/core": "^7.0.2",
     "@angular/flex-layout": "^7.0.0-beta.19",
-    "@angular/forms": "~7.0.0",
-    "@angular/http": "~7.0.0",
+    "@angular/forms": "^7.0.2",
+    "@angular/http": "^7.0.2",
     "@angular/material": "^7.0.2",
-    "@angular/platform-browser": "~7.0.0",
-    "@angular/platform-browser-dynamic": "~7.0.0",
-    "@angular/router": "~7.0.0",
+    "@angular/platform-browser": "^7.0.2",
+    "@angular/platform-browser-dynamic": "^7.0.2",
+    "@angular/router": "^7.0.2",
+    "@swimlane/ngx-charts": "^10.0.0",
     "core-js": "^2.5.4",
     "hammerjs": "^2.0.8",
-    "moment": "^2.22.2",
     "rxjs": "~6.3.3",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.10.0",
-    "@angular/cli": "~7.0.3",
-    "@angular/compiler-cli": "~7.0.0",
-    "@angular/language-service": "~7.0.0",
+    "@angular-devkit/build-angular": "^0.10.4",
+    "@angular/cli": "^7.0.4",
+    "@angular/compiler-cli": "^7.0.2",
+    "@angular/language-service": "^7.0.2",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
@@ -46,10 +46,10 @@
     "karma-coverage-istanbul-reporter": "~2.0.1",
     "karma-jasmine": "~1.1.2",
     "karma-jasmine-html-reporter": "^0.2.2",
-    "ng-swagger-gen": "^1.3.2",
+    "ng-swagger-gen": "^1.4.0",
     "protractor": "~5.4.0",
     "ts-node": "~7.0.0",
     "tslint": "~5.11.0",
-    "typescript": "~3.1.1"
+    "typescript": "^3.1.6"
   }
 }
