--- a/ormconfig.json
+++ b/ormconfig.json
@@ -2,9 +2,9 @@
     "type": "postgres",
     "host": "localhost",
     "port": 5432,
-    "username": "mikahassinen",
+    "username": "mika",
     "password": "",
-    "database": "mikahassinen",
+    "database": "mika",
     "entities": ["src/**/**.entity{.ts,.js}"],
     "migrationsTableName": "migrations",
     "migrations": ["migrations/*.ts"],
