--- a/package.json
+++ b/package.json
@@ -26,11 +26,12 @@
     "url": "git@github.com:mikahas/saavai.git"
   },
   "dependencies": {
-    "@nestjs/common": "^5.1.0",
-    "@nestjs/core": "^5.1.0",
-    "@nestjs/passport": "^5.1.0",
-    "@nestjs/swagger": "^2.5.1",
-    "@nestjs/typeorm": "^5.2.2",
+    "@nestjs/common": "^6.7.1",
+    "@nestjs/core": "^6.7.1",
+    "@nestjs/passport": "^6.1.0",
+    "@nestjs/platform-express": "^6.7.1",
+    "@nestjs/swagger": "^3.1.0",
+    "@nestjs/typeorm": "^6.1.3",
     "@types/lodash": "^4.14.117",
     "ajv": "^6.5.4",
     "bcryptjs": "^2.4.3",
@@ -41,24 +42,25 @@
     "nanoid": "^2.0.0",
     "passport": "^0.4.0",
     "passport-http-bearer": "^1.0.1",
-    "reflect-metadata": "^0.1.12",
+    "reflect-metadata": "0.1.12",
     "rxjs": "^6.2.2",
+    "swagger-ui-express": "^4.1.1",
     "typeorm": "^0.2.8",
     "typescript": "^3.0.1"
   },
   "devDependencies": {
-    "@nestjs/testing": "^5.1.0",
+    "@nestjs/testing": "^6.7.1",
     "@types/express": "^4.16.0",
     "@types/jest": "^23.3.1",
     "@types/node": "^10.7.1",
     "@types/supertest": "^2.0.5",
-    "jest": "^23.5.0",
+    "jest": "^24.0.0",
     "nodemon": "^1.18.3",
     "pg": "^7.6.0",
     "prettier": "^1.14.2",
     "rimraf": "^2.6.2",
     "supertest": "^3.1.0",
-    "ts-jest": "^23.1.3",
+    "ts-jest": "^24.1.0",
     "ts-loader": "^4.4.2",
     "ts-node": "^7.0.1",
     "tsconfig-paths": "^3.5.0",
